# Improving-Graph-Neural-Networks-on-Multimodal-Data

./: README.md  pyproject.toml
notebooks/: analyse_items_embeddings.ipynb  final_results.ipynb  modify_matrix.ipynb  run_all.ipynb  split_by_gmm.ipynb  test_gm_switch_case.ipynb
src/multimodal_gnn/: basic_cat_augmentation.py  label_items_with_gmm.py  label_items_with_kmeans.py  main_gmgnn.py  split_by_gmm.py  srgnn_main.py  srgnn_model.py  tagnn_main.py  train_multiple_gms.py  utils.py
